compose: Fix bug in preview where image at the end would be misaligned.
The `margin-bottom` was removed for the last element in the preview in
e55f5a1b5903994a65844e8c711989f5ed32e51c to remove vertical shifts when
toggling preview mode, but it is not needed for image / video previews,
so now `margin-bottom` is not set to 0 for the last inline preview.

--- a/web/styles/rendered_markdown.css
+++ b/web/styles/rendered_markdown.css
@@ -884,7 +884,7 @@
         margin-top: 0;
     }
 
-    & > :last-child {
+    & > :last-child:not(.message_inline_image) {
         margin-bottom: 0;
     }
 }
